readme e caricamento mappa passata al momento del lancio, forse devo implementare i point

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-project( Progetto_finale )
+project( generate_robot_path )
  
 cmake_minimum_required( VERSION 2.8)
 cmake_policy( SET CMP0015 NEW )
@@ -10,5 +10,5 @@ set( SRCS src/project_app.cpp src/get_line.cpp src/pgm_file.cpp src/tools.cpp sr
 
 include_directories( include )
 
-add_executable ( Progetto_finale ${SRCS} )
-set_target_properties (Progetto_finale PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
+add_executable ( generate_robot_path ${SRCS} )
+set_target_properties (generate_robot_path PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
